--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
 	<build>
 	<finalName>docker-jenkins-integration-sample</finalName>
 	</build>
+	
+	<properties>
+  		<maven.compiler.source>1.8</maven.compiler.source>
+  		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 </project>
