--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,19 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 
-	<build>
-	<finalName>docker-jenkins-integration-sample</finalName>
-	</build>
 	
 	<properties>
-  		<maven.compiler.source>1.8</maven.compiler.source>
-  		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version>
 	</properties>
+	
+	<build>
+	<finalName>docker-jenkins-integration-sample</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
