--- a/pom.xml
+++ b/pom.xml
@@ -9,22 +9,20 @@
 
 
 	
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
-	
 	<build>
 	<finalName>docker-jenkins-integration-sample</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				 <configuration>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
             </configuration>
-			</plugin>
-		</plugins>
-	</build>
+        </plugin>
+    </plugins>
+</build>
+	
 
 </project>
